--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;meta charset="UTF-8"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1">{% seo %}</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;!--[if lt IE 9]&gt;</span></p>
@@ -34,17 +35,21 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% if site.logo %}</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;img src="{{site.logo | relative_url}}" alt="Logo" /&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% endif %}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;p&gt;{{ site.description | default: site.github.project_tagline }}&lt;/p&gt;</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% if site.github.is_project_page %}</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;p class="view"&gt;&lt;a href="{{ site.github.repository_url }}"&gt;View the Project on GitHub &lt;small&gt;{{ site.github.repository_nwo }}&lt;/small&gt;&lt;/a&gt;&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% endif %}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% if site.github.is_user_page %}</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;p class="view"&gt;&lt;a href="{{ site.github.owner_url }}"&gt;View My GitHub Profile&lt;/a&gt;&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% endif %}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% if site.show_downloads %}</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;ul class="downloads"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;li&gt;&lt;a href="{{ site.github.zip_url }}"&gt;Download &lt;strong&gt;ZIP File&lt;/strong&gt;&lt;/a&gt;&lt;/li&gt;</span></p>
@@ -54,9 +59,11 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% endif %}</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/header&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;section&gt;</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{{ content }}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/section&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;footer&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% if site.github.is_project_page %}</span></p>
