--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,10 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+      <p>Menupunkt 1</p>
+      <p>Menupunkt 2</p>
+      <p>Menupunkt 3</p>
+
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
