--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@ menu3url: ./publications.html
       <p>CV</p>
       <p>Lehre</p>
       <p>Publikationen</p>
-      <p><a href="{{ page.menu1url }}">{{ layout.menu1 }}</a></p>
-      <p><a href="{{ page.menu2url }}">{{ layout.menu2 }}</a></p>
-      <p><a href="{{ page.menu3url }}">{{ layout.menu3 }}</a></p>
+      <p><a href="{{ layout.menu1url }}">{{ layout.menu1 }}</a></p>
+      <p><a href="{{ layout.menu2url }}">{{ layout.menu2 }}</a></p>
+      <p><a href="{{ layout.menu3url }}">{{ layout.menu3 }}</a></p>
 
 
         {% if site.github.is_project_page %}
