--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,10 @@ menu3url: ./publications.html
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+
+      {{ ![Mein Bild](/assets/me.jpg) }}
+
+      <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
