--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@ menu3url: ./publications.html
     <div class="wrapper">
       <header>
 
-      {{ ![Mein Bild](/assets/me.jpg) }}
+      {{ ![Mein Bild](./assets/me.jpg) }}
 
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
