--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@ menu3url: ./publications.html
     <div class="wrapper">
       <header>
 
-      <p>{{ ![Mein Bild](./assets/me.jpg) }}</p>
+      <p>![Mein Bild](./assets/me.jpg)</p>
 
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
