--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@ menu2: Courses
 menu2url: ./teaching.html
 menu3: Publications
 menu3url: ./publications.html
+img: Mein Bild
+img_url: ./assets/me.jpg
 ---
 
 <!DOCTYPE html>
@@ -24,9 +26,9 @@ menu3url: ./publications.html
     <div class="wrapper">
       <header>
 
-      <p>![Mein Bild](./assets/me.jpg)</p>
+        <img src="{{ layout.img_url }}" alt="{{ layout.img }}">
 
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
