user_pgae entfernt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@ menu3: Publications
 menu3url: ./publications.html
 img: Mein Bild
 img_url: ./assets/me.jpg
+github.is_user_page: false
 ---
 
 <!DOCTYPE html>
@@ -41,13 +42,13 @@ img_url: ./assets/me.jpg
       <p><a href="{{ layout.menu3url }}">{{ layout.menu3 }}</a></p>
 
 
-        #{% if site.github.is_project_page %}
-        #<p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        #{% endif %}
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
 
-        #{% if site.github.is_user_page %}
-        #<p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        #{% endif %}
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
