--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ img_url: ./assets/me.jpg
 
         <img src="{{ layout.img_url }}" alt="{{ layout.img }}">
 
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a class="name" href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
