--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,15 @@ layout: default
 
 <p class="view">by {{ page.author | default: site.author }}</p>
 
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+
+
 {{content}}
 
 {% if page.tags %}
