--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,5 @@
 ---
-menu1: CV
-menu1url: ./cv.html
-menu2: Courses
-menu2url: ./teaching.html
-menu3: Publications
-menu3url: ./publications.html
-img: Mein Bild
-img_url: ./assets/me.jpg
+layout: default
 ---
 
 <!DOCTYPE html>
