--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,9 @@ layout: default
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-      <p><a href="{{ site.menu1url }}">{{ layout.menu1 }}</a></p>
-      <p><a href="{{ site.menu2url }}">{{ layout.menu2 }}</a></p>
-      <p><a href="{{ site.menu3url }}">{{ layout.menu3 }}</a></p>
+      <p><a href="{{ site.menu1url }}">{{ site.menu1 }}</a></p>
+      <p><a href="{{ site.menu2url }}">{{ site.menu2 }}</a></p>
+      <p><a href="{{ site.menu3url }}">{{ site.menu3 }}</a></p>
 
 
         {% if site.github.is_project_page %}
