--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
 
       </section>
 
-      <div class="block">
+      <div>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
