--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
       <div class="column is-one-third">
 
-        <div class="block">
+        <div>
 
         <img src="{{ page.img_url }}" alt="{{ page.img }}">
 
@@ -43,7 +43,7 @@
         </div>
 
         <!-- Menüleiste -->
-        <div class="block">
+        <div>
           <ul>
             <li>Georg-August-Universität Göttingen</li>
             <li>Institut für Soziologie</li>
@@ -57,7 +57,7 @@
         </div>
 
         <hr>
-        <div class="menu block">
+        <div class="menu">
           <p class="menu-label">Menü</p>
           <ul class="menu-list">
             <li><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
@@ -84,7 +84,6 @@
         {% endif %}
 
       </div>
-      <!-- </header> -->
 
       <section>
 
@@ -95,7 +94,6 @@
             <div class="block">
             <p class="content"> {{ content }} </p>
             </div>
-
 
       </section>
 
