Abstand footer korrigiert

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,7 @@
 
 </div>
 </div>
-  <div class="footer">
+  <div class="footer mt-6">
     <div class="content has-text-centered">
     {% if site.github.is_project_page %}
     <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
