p class aus hauptspalte entfernt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
         <!-- Content -->
 
             <div class="block">
-            <p class="content"> {{ content }} </p>
+             {{ content }}
             </div>
 
       </div>
