Bulma content-klasse für die hauptspalte gesetzt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
 
         <!-- Content -->
 
-            <div class="block">
+            <div class="content">
              {{ content }}
             </div>
 
