--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,15 @@ layout: default
 ---
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+<h1 class="title is-3">{{ page.title }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<p class="subtitle is-6">by {{ page.author | default: site.author }}</p>
+
+<div class="content">
 
 {{content}}
+
+</div>
 
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
