--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1 class="title is-3">{{ page.title }}</h1>
 
-<p class="subtitle is-6">by {{ page.author | default: site.author }}</p>
+<p class="subtitle is-6">von {{ page.author | default: site.author }}</p>
 
 <div class="content">
 
@@ -14,5 +14,7 @@ layout: default
 </div>
 
 {% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+  <div class="tags">
+    <span class="tag">{{ page.tags | join: "</span> - <span class="tag">" }}</span>
+  </div>
 {% endif %}
