--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,6 @@ layout: default
 
 {% if page.tags %}
   <div class="tags">
-    <span class="tag">{{ page.tags | join: "</span> <span class=\"tag\">" }}</span>
+    <span class="tag"> {{ page.tags | join: "  </span> <span class=&quot;tag&quot;> " }} </span>
   </div>
 {% endif %}
