--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-    <div class="container mt-6">
+    <div class="container mt-6 px-3 py-3">
 
       <div class="columns">
 
