Divider-Klasse statt HR

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,10 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <h2 class="subtitle is-6 mb-5">{{ site.description | default: site.github.project_tagline }}</h2>
+        <!-- <h2 class="subtitle is-6 mb-5">{{ site.description | default: site.github.project_tagline }}</h2> -->
 
         </div>
 
-        <!-- Menüleiste -->
         <div>
           <ul class="is-size-7">
             <li>Georg-August-Universität Göttingen</li>
@@ -56,7 +55,10 @@
           </ul>
         </div>
 
-        <hr>
+        <!-->Divider-->
+        <div class="is-divider" data-content="Menü"></div>
+
+        <!-- Menüleiste -->
         <div class="menu">
           <p class="menu-label">Menü</p>
           <ul class="menu-list">
