--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
           </ul>
         </div>
 
-        <!-->Divider-->
+        <!-- Divider -->
         <div class="is-divider" data-content="Menü"></div>
 
         <!-- Menüleiste -->
