--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
         </div>
 
-        <div class="my-3">
+        <div class="py-3">
 
           <h1 class="title is-5"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
@@ -60,7 +60,7 @@
         <div class="is-divider" data-content="Menü"></div>
 
         <!-- Menüleiste -->
-        <div class="menu my-3">
+        <div class="menu py-3">
           <p class="menu-label">Menü</p>
           <ul class="menu-list">
             <li><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
