--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
         </div>
 
         <!-- Divider -->
+        <hr class="hr">
         <div class="is-divider" data-content="Menü"></div>
 
         <!-- Menüleiste -->
