--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             <img src="{{site.logo | relative_url}}" alt="Logo" />
           {% endif %}
 
-          <!-- <h2 class="subtitle is-6 mb-5">{{ site.description | default: site.github.project_tagline }}</h2> -->
+          <!-- <h2 class="subtitle is-6">{{ site.description | default: site.github.project_tagline }}</h2> -->
 
           <ul class="is-size-7">
             <li>Georg-August-Universität Göttingen</li>
@@ -58,10 +58,9 @@
 
         <!-- Divider -->
         <hr class="hr">
-        <div class="is-divider" data-content="Menü"></div>
 
         <!-- Menüleiste -->
-        <div class="menu py-3">
+        <div class="menu">
           <p class="menu-label">Menü</p>
           <ul class="menu-list">
             <li><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
