--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,23 +45,18 @@
           <!-- <h2 class="subtitle is-6">{{ site.description | default: site.github.project_tagline }}</h2> -->
         </div>
 
-        <!-- Adresse -->
-        <div>
-
-          <ul class="is-size-7">
-            <li>Georg-August-Universität Göttingen</li>
-            <li>Institut für Soziologie</li>
-            <li>Platz der Göttinger Sieben 3</li>
-            <li>37073 Göttingen</li>
-            <br>
-            <li><span class="icon mr-3"><i class="fas fa-phone"></i></span>+49 (0)551 39 21659</li>
-            <li><span class="icon mr-3"><i class="fas fa-at"></i></span>pfeuers[at]gwdg.de</li>
-            <li><span class="icon mr-3"><i class="fas fa-home"></i></span><a href="https://www.uni-goettingen.de/de/dr.+patrick+feuerstein/201929.html">Institutsseite</a></li>
-          </ul>
-        </div>
-
         <!-- Menüleiste -->
         <div class="menu">
+          <p class="menu-label">Kontakt</p>
+          <ul class="is-size-7">
+            <li><span class="icon mr-3"><i class="fas fa-phone"></i></span>+49 (0)551 39 21659</li>
+            <li><span class="icon mr-3"><i class="fas fa-at"></i></span>pfeuers[at]gwdg.de</li>
+            <li><span class="icon mr-3"><i class="fas fa-home"></i></span>Georg-August-Universität Göttingen <br>
+            Institut für Soziologie <br>
+            Platz der Göttinger Sieben 3 <br>
+            37073 Göttingen <br></li>
+          </ul>
+
           <p class="menu-label">Menü</p>
           <ul class="menu-list">
             <li><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
