--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,9 @@
             <li><span class="icon mr-3"><i class="fas fa-phone"></i></span>+49 (0)551 39 21659</li>
             <li><span class="icon mr-3"><i class="fas fa-at"></i></span>pfeuers[at]gwdg.de</li>
             <li><span class="icon mr-3"><i class="fas fa-home"></i></span>Georg-August-Universität Göttingen <br>
-            Institut für Soziologie <br>
-            Platz der Göttinger Sieben 3 <br>
-            37073 Göttingen <br></li>
+            <span class="icon mr-3"><i class="fas fa-home"></i></span>Institut für Soziologie <br>
+            <span class="icon mr-3"><i class="fas fa-home"></i></span>Platz der Göttinger Sieben 3 <br>
+            <span class="icon mr-3"><i class="fas fa-home"></i></span>37073 Göttingen <br></li>
           </ul>
 
           <p class="menu-label">Menü</p>
