--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,9 +59,9 @@
 
           <p class="menu-label">Menü</p>
           <ul class="menu-list is-size-7">
-            <li><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
-            <li><a href="{{ page.menu2url }}">{{ page.menu2 }}</a></li>
-            <li><a href="{{ page.menu3url }}">{{ page.menu3 }}</a></li>
+            <li class="ml-7"><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
+            <li class="ml-7"><a href="{{ page.menu2url }}">{{ page.menu2 }}</a></li>
+            <li class="ml-7"><a href="{{ page.menu3url }}">{{ page.menu3 }}</a></li>
           </ul>
         </div>
 
