--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,16 +52,16 @@
             <li><span class="icon mr-3"><i class="fas fa-phone"></i></span>+49 (0)551 39 21659</li>
             <li><span class="icon mr-3"><i class="fas fa-at"></i></span>pfeuers[at]gwdg.de</li>
             <li><span class="icon mr-3"><i class="fas fa-home"></i></span>Georg-August-Universität Göttingen <br>
-            <span class="icon mr-3"><i></i></span>Institut für Soziologie <br>
-            <span class="icon mr-3"><i></i></span>Platz der Göttinger Sieben 3 <br>
-            <span class="icon mr-3"><i></i></span>37073 Göttingen <br></li>
+            <span class="icon mr-3"></span>Institut für Soziologie <br>
+            <span class="icon mr-3"></span>Platz der Göttinger Sieben 3 <br>
+            <span class="icon mr-3"></span>37073 Göttingen <br></li>
           </ul>
 
           <p class="menu-label">Menü</p>
           <ul class="menu-list is-size-7">
-            <li class="ml-7"><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
-            <li class="ml-7"><a href="{{ page.menu2url }}">{{ page.menu2 }}</a></li>
-            <li class="ml-7"><a href="{{ page.menu3url }}">{{ page.menu3 }}</a></li>
+            <li><span class="icon mr-3"></span><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
+            <li><span class="icon mr-3"></span><a href="{{ page.menu2url }}">{{ page.menu2 }}</a></li>
+            <li><span class="icon mr-3"></span><a href="{{ page.menu3url }}">{{ page.menu3 }}</a></li>
           </ul>
         </div>
 
