--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,10 +51,10 @@
           <ul class="is-size-7">
             <li><span class="icon mr-3"><i class="fas fa-phone"></i></span>+49 (0)551 39 21659</li>
             <li><span class="icon mr-3"><i class="fas fa-at"></i></span>pfeuers[at]gwdg.de</li>
-            <li><span class="icon mr-3"><i class="fas fa-home"></i></span>Georg-August-Universität Göttingen <br>
-            <span class="icon mr-3"></span>Institut für Soziologie <br>
-            <span class="icon mr-3"></span>Platz der Göttinger Sieben 3 <br>
-            <span class="icon mr-3"></span>37073 Göttingen <br></li>
+            <li><span class="icon mr-3"><i class="fas fa-home"></i></span>Georg-August-Universität Göttingen</li>
+            <li><span class="icon mr-3"></span>Institut für Soziologie</li>
+            <li><span class="icon mr-3"></span>Platz der Göttinger Sieben 3</li>
+            <li><span class="icon mr-3"></span>37073 Göttingen</li>
           </ul>
 
           <p class="menu-label">Menü</p>
