--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,9 +59,9 @@
 
           <p class="menu-label">Menü</p>
           <ul class="is-size-7">
-            <li><span class="icon mr-3"><i></i></span><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
-            <li><span class="icon mr-3"><i></i></span><a href="{{ page.menu2url }}">{{ page.menu2 }}</a></li>
-            <li><span class="icon mr-3"><i></i></span><a href="{{ page.menu3url }}">{{ page.menu3 }}</a></li>
+            <li><span class="icon mr-3"><i class="far fa-list-alt"></i></span><a href="{{ page.menu1url }}">{{ page.menu1 }}</a></li>
+            <li><span class="icon mr-3"><i class="fas fa-chalkboard-teacher"></i></span><a href="{{ page.menu2url }}">{{ page.menu2 }}</a></li>
+            <li><span class="icon mr-3"><i class="far fa-newspaper"></i></span><a href="{{ page.menu3url }}">{{ page.menu3 }}</a></li>
           </ul>
         </div>
 
