--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,7 @@
             <li><span class="icon mr-3"><i></i></span>Institut für Soziologie</li>
             <li><span class="icon mr-3"><i></i></span>Platz der Göttinger Sieben 3</li>
             <li><span class="icon mr-3"><i></i></span>37073 Göttingen</li>
+            <li><span class="icon mr-3"><i class="fas fa-university"></i></span><a href="https://www.uni-goettingen.de/de/dr.+patrick+feuerstein/201929.html">Institutsseite</a></li>
           </ul>
 
         </div>
